# libgraph

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/: Accumulators.hpp  GraphBFS.hpp  GraphBase.hpp  GraphDFS.hpp  GraphDijkstra.hpp
src/: GraphBFS.cpp  GraphBase.hpp
tests/: TestBFS.cpp  TestDFS.cpp  TestDijkstra.cpp
